--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -39,6 +39,12 @@ jobs:
       - name: Terraform Init
         run: terraform init
 
+      - name: Upload Terraform Modules File
+        uses: actions/upload-artifact@v4
+        with:
+          name: modules-file-${{ matrix.env }}
+          path: .terraform/modules/modules.json
+
       - name: Terraform Plan
         run: terraform plan -state=${{ matrix.env }}.tfstate -var-file=${{ matrix.env }}.tfvars -refresh=false -out=plan.raw
 
@@ -53,7 +59,7 @@ jobs:
           output: plan-${{ matrix.env }}.json
 
       - name: Upload Terraform Plan Output
-        uses: actions/upload-artifact@v4.4.0
+        uses: actions/upload-artifact@v4
         with:
           name: plan-file-${{ matrix.env }}
           path: plan-${{ matrix.env }}.json
@@ -72,13 +78,19 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Download Terraform Plan Output
-        uses: actions/download-artifact@v4.1.7
+        uses: actions/download-artifact@v4
         with:
           name: plan-file-dev
           path: tf-plan-files/
 
+      - name: Download Terraform Modules file
+        uses: actions/download-artifact@v4
+        with:
+          name: modules-file-dev
+          path: tf-plan-files/
+
       - name: Download Terraform Plan Output
-        uses: actions/download-artifact@v4.1.7
+        uses: actions/download-artifact@v4
         with:
           name: plan-file-prod
           path: tf-plan-files/
@@ -101,8 +113,9 @@ jobs:
           output: tf-plan-files/manifest.json
 
       - name: Resourcely CI
-        uses: Resourcely-Inc/resourcely-action@main
+        uses: Resourcely-Inc/resourcely-action@38abf2d73d8bb6c91c6563e3c36f6e827ffbf4df
         with:
           resourcely_api_token: ${{ secrets.RESOURCELY_API_TOKEN }}
-          resourcely_api_host: "https://api.resourcely.io"
+          resourcely_api_host: "https://api.staging.resourcely.io"
           tf_plan_directory: "tf-plan-files"
+          modules_file: "tf-plan-files/modules-dev.json"
