--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -118,5 +118,5 @@ jobs:
           resourcely_api_token: ${{ secrets.RESOURCELY_API_TOKEN }}
           resourcely_api_host: "https://api.dev.resourcely.io"
           tf_plan_directory: "tf-plan-files"
-          modules_file: "tf-plan-files/modules-dev.json"
+          modules_file: "tf-plan-files/modules.json"
           docker_tag: "dev-latest"
